MonetDB/src/mal/Tests/tst730.stable
# Monet Database Server V5.0
# Copyright (c) 1993-2002, CWI. All rights reserved.
# compiled for i686-pc-linux-gnu/32bit.
# gdk_dbfarm:/ufs/mk/monet_5-0/Linux/../dbfarm
# gdk_dbname:demo
# gdk_dbdir:/ufs/mk/monet_5-0/Linux/../dbfarm/demo
# gdk_distr:/ufs/mk/monet_5-0/Linux
# monetrc:/ufs/mk/.monet.conf
## functions and rules with variable arguments complicate our live
#
#function pr(format:str,arg:any...):void;
#	i:= -1;
#barrier  b:= iterator.argument(i,arg);
#exit b;
#end pr; 
function Admin.pr(format:str,arg:any...):void; #0:(pr:void)<-(format:str)(arg:any)
    i := -1; #1:(i:int)<-($4:int)
barrier b := iterator.argument(i,arg); #2 unknown:(b:any)<-(i:int)(arg:any) jump 4
exit b; #3:(b:any)
end pr; #4:
#
## how to iterator through a variable list
#function prStr(format:str,arg:str...):void;
#	i:= -1;
#	limit:= Array.getLength(arg);
#barrier  b:= nextElement(i,0,limit);	#elm:= arg[i]
#	elm:= Array.get(arg,i);  #elm:= arg[i]
#	printf("argument ");
#	printf(i);
#	printf(elm);
#exit b;
#end prStr; 
!ERROR: 'Array.getLength' undefined in Admin.prStr[2]
!ERROR: 'Array.get' undefined in Admin.prStr[4]
!ERROR: 'printf' undefined in Admin.prStr[6]
function Admin.prStr(format:str,arg:str...):void; #0:(prStr:void)<-(format:str)(arg:str)
    i := -1; #1:(i:int)<-($4:int)
    limit := Array.getLength(arg); #2 unknown:(limit:any)<-(arg:str)
barrier b := nextElement(i,0,limit); #3 unknown:(b:any)<-(i:int)($7:int)(limit:any) jump 9
    elm := Array.get(arg,i); #4 unknown:(elm:any)<-(arg:str)(i:int)
    system.printf("argument "); #5:($9:int)<-($10:str)
    printf(i); #6 unknown:($11:any)<-(i:int)
    printf(elm); #7 unknown:($12:any)<-(elm:any)
exit b; #8:(b:any)
end prStr; #9:
#
#pr("hello",1,true);
#prStr("hello",1,true);
#prStr("hello","quick","brown","fox");
#
!ERROR: 'iterator.argument' undefined in Admin.pr[2]
!ERROR: Error in cloned function
function Admin.pr(format:str,arg:int...):int; #0:(arg:int)<-(format:str)(arg:int)
    i := -1; #1:(i:int)<-($4:int)
barrier b := iterator.argument(i,arg); #2 unknown:(b:any)<-(i:int)(arg:int) jump 4
exit b; #3:(b:any)
end pr; #4:
!ERROR: 'prStr' undefined in Admin.main[2]
function Admin.main():int; #0:(main:int)
    Admin.pr("hello",1,true); #1:($1:void)<-($2:str)($3:int)($4:bit)
    prStr("hello",1,true); #2 unknown:($5:any)<-($2:str)($3:int)($4:bit)
    Admin.prStr("hello","quick","brown","fox"); #3:($6:void)<-($2:str)($7:str)($8:str)($9:str)
end main; #4:
!ERROR: SyntaxError:Admin.main[0]:'Admin.main' contains errors
>